Bind package locks to repository snapshots